# bbdacha-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: callbacks.py  database.py  main.py  scheduler.py  settings.py  states.py  utils.py
app/handlers/: preferences.py  schedule.py  tournament.py
app/keyboards/: preferences.py  tournaments.py
app/messages/: matches.py  preferences.py  tournament.py
app/models/: __init__.py  match.py  tournament.py  user.py
app/services/: matches.py  tournaments.py  users.py
migrations/: env.py
migrations/versions/: 2024_09_29_1905-ea2cdf2c04ca_initial.py  2024_10_01_1940-cce6eb0281da_add_match_type.py  2024_10_19_1928-0b8090b93ad8_optional_best_of.py  2024_10_19_2033-1d5a5b8b34fc_with_tz.py
