[project]
name = "bbdacha-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.1",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pytz>=2024.2",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.35",
    "nanoid>=2.0.0",
    "async-lru>=2.0.4",
    "emoji>=2.13.2",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.7"]
